# lua---opengm

./: CMakeLists.txt  README.md  licence.txt  opengm-1.0-1.rockspec
include/arraypow2/: arraypow2.hxx
include/marray/: marray.hxx  marray_hdf5.hxx
include/opengm/: accumulation.hxx  adder.hxx  decomposer.hxx  discretespace.hxx  exitcondition.hxx  explicitfactor.hxx  factorbuffer.hxx  graphicalmodel.hxx  integrator.hxx  maxdistance.hxx  maximizer.hxx  minimizer.hxx  multiplier.hxx  opengm.hxx  serialization.hxx  timing.hxx  windows.h
include/opengm/inference/: astar.hxx  beliefpropagation.hxx  graphcut.hxx  icm.hxx  inference.hxx  junctioninference.hxx  lazyflipper.hxx  lazyflipper_adjacency.hxx  lazyflipper_forest.hxx  lazyflipper_tagging.hxx  movemaker.hxx  treereweightedbeliefpropagation.hxx
include/ufd/: ufd.hxx
lua/: CMakeLists.txt  example.lua  factors.lua  help.lua  init.lua  lopengm.cxx  opengm.lua
matlab/marray/: marray_load.m  marray_load_hyperslab.m  marray_save.m
matlab/opengm/: myassert.m  opengm_add_factor.m  opengm_create.m  opengm_deserialize.m  opengm_factor.m  opengm_factors_of_variables.m  opengm_info.m  opengm_number_of_factors.m  opengm_number_of_variables.m  opengm_serialize.m  opengm_update_factor.m  test.m
matlab/opengm/tutorial/: tutorial1.m  tutorial2.m
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt  opengm.cxx
src/lua/: lopengm.cxx  opengm.lua
src/test/: CMakeLists.txt  test-graphcut.cxx  test.cxx
src/tutorial/: CMakeLists.txt  tutorial1.cxx  tutorial2.cxx
